ver 0.5.1
- Updated GUI to v0.3.0
- Added tooltips to GUI
- Fixed a bug that max size will be uexp's max size.

ver 0.5.0
- Supported Texture2DArray, TextureCubeArray, and VolumeTexture
- Restored the batch file method for injection
- Added "save detected version" option for check mode
- Added "copy" mode
- Fixed a bug that num slices won't be saved correctly for some old UE versions.
- Refactored serialize functions
- Removed file list method (txt will be used for batch file method)

ver 0.4.5
- Supported ShadowMapTexture2D
- Added filter options (Possible to use bicubic interpolation for mip generation)
- Updated GUI to v0.2.2 (GUI can save output path for each mode)
- Improved error massages for dds files
- Fixed a bug that the tool can't load uncompressed mipmaps correctly
- Fixed an error when loading non-zero values for FObjectExport.TemplateIndex
- Added tests

ver 0.4.4
- Supported UE4.0 ~ 4.9.
- Added "Skip non-texture assets" option.
- Fixed an error when loading assets that have multiple textures.
- Improved check mode (removed uneccessary versions from the check list)
- Removed parse errors for unsupported pixel formats
- Refined codes

ver 0.4.3
- Supported UE4.10 ~ 4.12
- Supported assets that have multiple texture objects
- Supported LightMapTexture2D
- Added a function to update PackageSource (use "MOD " for PackageSource)
- Updated texconv

ver 0.4.2
- Supported UE5.1
- Supported assets that have multiple texture objects (only for export mode)
- Fixed an error when assets have non-ascii characters.
- Fixed a bug that it won't update file size when updating name map.
- Refined codes

ver 0.4.1
- Supported more pixel formats
- Supported dds files that have no fourCC
- Added "force_uncompressed" option to inject mode

ver 0.4.0 (Introduced Texconv-Custom-DLL)
- Updated GUI (v0.1.2 to v0.2.1)
- Introduced tempfile for temporary files
- Introduced custom build for texconv (Texconv-Custom-DLL)
- Supported cubemaps
- Improved DDS handling

ver 0.3.3