@@ -30,7 +30,7 @@ class Umipmap(SerializableBase):
         self.is_uexp = False
         self.is_meta = False
         self.is_upntl = False
-        self.ubulk_flag = 0
+        self.ubulk_flags = 0
 
     def update(self, data: bytes, size: int, depth: int, is_uexp: bool):
         self.is_uexp = is_uexp
@@ -53,9 +53,9 @@ class Umipmap(SerializableBase):
         if ar.version <= "4.27":
             ar == (Uint32, 1, "bCooked")
 
-        ar << (Uint32, self, "ubulk_flag")
+        ar << (Uint32, self, "ubulk_flags")
         if ar.is_reading:
-            self.__unpack_ubulk_flag()
+            self.__unpack_ubulk_flags()
 
         ar << (Uint32, self, "data_size")
         ar == (Uint32, self.data_size, "data_size2")
@@ -90,11 +90,11 @@ class Umipmap(SerializableBase):
         ar << (Int64, self, "offset")
         ar.seek(current)
 
-    def __unpack_ubulk_flag(self):
-        self.is_uexp = (self.ubulk_flag & BulkDataFlags.BULKDATA_ForceInlinePayload > 0) or \
-                       (self.ubulk_flag & BulkDataFlags.BULKDATA_Unused > 0)
-        self.is_meta = self.ubulk_flag & BulkDataFlags.BULKDATA_Unused > 0
-        self.is_upntl = self.ubulk_flag & BulkDataFlags.BULKDATA_OptionalPayload > 0
+    def __unpack_ubulk_flags(self):
+        self.is_uexp = (self.ubulk_flags & BulkDataFlags.BULKDATA_ForceInlinePayload > 0) or \
+                       (self.ubulk_flags & BulkDataFlags.BULKDATA_Unused > 0)
+        self.is_meta = self.ubulk_flags & BulkDataFlags.BULKDATA_Unused > 0
+        self.is_upntl = self.ubulk_flags & BulkDataFlags.BULKDATA_OptionalPayload > 0
         if self.is_upntl:
             raise RuntimeError("Optional payload (.is_upntl) is unsupported.")
 
@@ -102,19 +102,19 @@ class Umipmap(SerializableBase):
         # update bulk flags
         if self.is_uexp:
             if self.is_meta:
-                self.ubulk_flag = BulkDataFlags.BULKDATA_Unused
+                self.ubulk_flags = BulkDataFlags.BULKDATA_Unused
             else:
-                self.ubulk_flag = BulkDataFlags.BULKDATA_ForceInlinePayload
+                self.ubulk_flags = BulkDataFlags.BULKDATA_ForceInlinePayload
                 if self.version != 'ff7r':
-                    self.ubulk_flag |= BulkDataFlags.BULKDATA_SingleUse
+                    self.ubulk_flags |= BulkDataFlags.BULKDATA_SingleUse
         else:
             self.ubulk_flags = BulkDataFlags.BULKDATA_PayloadAtEndOfFile
             if self.version >= '4.14':
-                self.ubulk_flag |= BulkDataFlags.BULKDATA_Force_NOT_InlinePayload
+                self.ubulk_flags |= BulkDataFlags.BULKDATA_Force_NOT_InlinePayload
             if self.version >= '4.16':
-                self.ubulk_flag |= BulkDataFlags.BULKDATA_PayloadInSeperateFile
+                self.ubulk_flags |= BulkDataFlags.BULKDATA_PayloadInSeperateFile
             if (self.version == 'ff7r') or (self.version >= '4.26'):
-                self.ubulk_flag |= BulkDataFlags.BULKDATA_NoOffsetFixUp
+                self.ubulk_flags |= BulkDataFlags.BULKDATA_NoOffsetFixUp
 
     def print(self, padding: int = 2):
         pad = ' ' * padding
